Bug 399944 - Properties and Information can probably be combined
Summary: Properties and Information can probably be combined
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2018-10-17 19:12 UTC by Clint Moyer
Modified: 2023-09-07 14:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Clint Moyer 2018-10-17 19:12:40 UTC
SUMMARY
This may be biased towards my own environment. It seems there is a lot of excess space in the sidebar, which defaults to the "Information" tab when viewing files or directories. In particular it seems most objects lack metadata, and the "Description" metadata seems particularly unused/unloved. Conversely, to view "Properties" users must either right click the object or go to File > Properties. It seems intuitively this information should be available alongside the "Information", and the user shouldn't be expected to take strange routes to reach Properties.

We could add the Properties as a tab or merge into "Information".

STEPS TO REPRODUCE
1. Browse to a file or directory

OBSERVED RESULT
Must right-click or go to "File" to reach Properties

EXPECTED RESULT
Ideally this would be available in the sidebar or even merged with Information.
Comment 1 Nate Graham 2018-10-18 21:02:12 UTC
Agreed; there's probably a nice way to merge these. Semantically, "Information" and "Properties" are not readily distinct entities, so keeping them separate isn't ideal.
Comment 2 Bug Janitor Service 2023-08-31 01:19:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/221
Comment 3 Nate Graham 2023-09-07 14:35:32 UTC
Git commit 6545c47de9fdf830739737c52cbeaa2ce6a6411c by Nate Graham, on behalf of K. Cottonears.
Committed on 07/09/2023 at 16:35.
Pushed by ngraham into branch 'master'.

Combine File Properties and Information

Purges file properties and moves some of the general file properties
into the file information section.

M  +5    -0    lib/document/document.cpp
M  +38   -5    lib/imagemetainfomodel.cpp
M  +3    -0    lib/imagemetainfomodel.h

https://invent.kde.org/graphics/gwenview/-/commit/6545c47de9fdf830739737c52cbeaa2ce6a6411c