Combine File Properties and Information

Purges file properties and moves some of the general file properties
into the file information section.

BUG: 399944